Configure PostgreSQL connection and Hibernate

--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=api
+
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/beast_tailor
+spring.datasource.username=beasttailor_user
+spring.datasource.password=bt_pass
+
+# JPA / Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
